Testcases/pos/test23.jl
function main()
    a::Bool = false
    println(a || true && a == false)
    println(!a)
    println(a)
    println(false)
    println(1)
    println(1 == 1.0)
end
main()