Testcases/neg/test02.jl
# global variable
a::Integer = 10
function main()
end
main()

